# mtuci-cv-project

./: README.md  classes.txt  main.py  preproc.py  pyproject.toml  test_ocr.py  utils.py
output/: 0_2_res.json  0_3_res.json  0_4_res.json  0_5_res.json  0_6_res.json  0_7_res.json  0_8_res.json  plate_pre_res.json  plate_test_res.json
output2/: A001BO92_res.json  A001HY116_res.json  plate_test_res.json
output5/: res.json
tests/: 1.py
