[project]
name = "mtuci-cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.12.0.88",
    "paddleocr[all]>=3.3.2",
    "paddlepaddle==3.2.0",
    "pytesseract>=0.3.13",
    "ultralytics>=8.3.221",
]
